--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Norway -- History -- Haakon Gamli, 1217-1263 -- Drama'
 - !lcsh 'Norwegian drama'
 - !lcc 'PT'
+- GITenberg
 title: 'Kuninkaan-alut: Historiallinen näytelmä viidessä näytöksessä'
 url: http://www.gutenberg.org/ebooks/18246
